--- a/ShopOnline.Api/appsettings.json
+++ b/ShopOnline.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OnlineShoppingDBConnection": "server=FELIKA;database=OnlineShopBlazorApp1;Trusted_Connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
